syntax="proto3";

option java_multiple_files = true;
option java_package = "br.com.models";

message EmailCredentials {
  string email = 1;
  string password = 2;
}

message PhoneOTP {
  int32 number = 1;
  int32 code = 2;
  reserved 3;
  reserved "ddd";
  //int32 ddd = 3;
}

message Credentials {
  oneof mode {
    EmailCredentials emailMode = 1;
    PhoneOTP phoneMode = 2;
  }
}